# tman

./: .travis.yml  Cargo.toml  README.md
src/: cache.rs  cli.yml  dictionary.rs  error.rs  logger.rs  main.rs  settings.rs  trash.rs
src/lib/: cache.rs  error.rs  mod.rs  settings.rs
