[package]
name = "trash"
version = "1.0.0"
authors = ["Kove-W-O-Salter <kove.w.o.salter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.33", features = ["yaml"]}
dirs = "2.0.2"
regex = "1.3.1"
log = "0.4.8"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
chrono = "0.4.10"
console = "0.9.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }